tests/NormalTests/paczka1/fuzzy1/41988410.err
Error in line 2: S973 S973 17,0
Error in line 17: v7lm0Z S47 67,9
Error in line 15: l9klZxQN16 A535 50,0
Error in line 36: e81jj6Rf S47 64,9
